# rss-feed

./: .env.example  .gitignore  .pdm.toml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  migrate.py  models.py  models_old.py  pyproject.toml  requirements.txt  scheduler.py  summary.py
core/: requirements.txt
core/feed/: middlewares.py  models.py  views.py
core/feed/management/commands/: update_feeds.py
core/feed/templates/: index.html
core/feed/templates/article/: base.html
core/settings/: settings.py  urls.py  wsgi.py
docker/: core.dockerfile  newspaper.dockerfile  summarizer.dockerfile  telegram.dockerfile
etc/: Caddyfile
newspaper/: main.py  requirements.txt
src/: migrate.py
src/apps/feed/: admin.py  apps.py  signals.py  tasks.py  urls.py  views.py
src/apps/feed/management/commands/: run_scheduler.py
src/apps/feed/migrations/: 0001_initial.py  0002_alter_feed_author.py  0003_auto_20230122_1715.py  0004_auto_20230211_1800.py  0005_alter_feed_last_update.py  0006_alter_feed_interval.py
src/apps/feed/models/: __init__.py  feed.py  post.py
src/apps/feed/service/: generate_feed.py  parse_rss.py
src/core/: settings.py  urls.py
src/core/settings/: __init__.py  db.py  dramatiq.py  installed_apps.py
src/feed/: admin.py  middlewares.py  models.py  views.py
src/feed/management/commands/: update_feeds.py
src/feed/migrations/: 0001_initial.py  0002_alter_article_image_alter_article_url_alter_feed_url.py  0002_feed_title_alter_article_created_at_and_more.py
src/feed/templates/: article.html  base.html  feeds.html  index.html
src/feed/templates/article/: base.html  post.html  video.html
summarizer/: main.py  requirements.txt
telegram/: main.py  models.py  requirements.txt
templates/: article.html  feeds.html  index.html
