[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pytest-django",
    "mixer",
    "django-debug-toolbar",
    "flake8",
    "flake8-django",
    "wemake-python-styleguide",
]

[project]
name = "rss-feed"
version = "0.0.0"
description = ""
authors = [
    {name = "w0rng", email = "me@w0rng.ru"},
]
dependencies = [
    "django==3.2.9",
    "djangorestframework==3.12.4",
    "django-environ==0.8.1",
    "drf-yasg==1.20.0",
    "gunicorn==20.1.0",
    "sentry-sdk==1.4.3",
    "django-split-settings==1.1.0",
    "whitenoise==5.3.0",
    "django-lifecycle",
    "django-filter",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.environments]
prod = {override=true, env_file=".env"}
dev = {override=false, env_file=".env"}